fix button jump

--- a/app/components/Footer/styles.css
+++ b/app/components/Footer/styles.css
@@ -4,6 +4,7 @@ footer {
 	ul {
 		display: flex;
 		justify-content: center;
+		align-items: center;
 		gap: 24px;
 
 		li {
